--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.3",
@@ -22,7 +23,10 @@
   },
   "dependencies": {
     "@prisma/client": "^2.22.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "express-yup": "^1.0.0",
+    "morgan": "^1.10.0",
+    "yup": "^0.32.9"
   }
 }
