--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.3",
     "prisma": "^2.22.1",
@@ -26,6 +27,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "express-yup": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "yup": "^0.32.9"
   }
